2025/Mycpp/.metadata/.plugins/org.eclipse.cdt.ui/CH4_1.build.log
23:59:47 **** Rebuild of configuration Debug for project CH4_1 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\CH4_1.o" "..\\src\\CH4_1.cpp" 
..\src\CH4_1.cpp: In member function 'void MultiManager::currentUser()':
..\src\CH4_1.cpp:330:24: error: no matching function for call to 'CurrentUser::CurrentUser(Person&)'
      CurrentUser(person).run();
                        ^
..\src\CH4_1.cpp:232:5: note: candidate: CurrentUser::CurrentUser(Person*)
     CurrentUser(Person * pUser): pUser{} { }  // user(u)는 this->user = u 와 동일한 기능
     ^~~~~~~~~~~
..\src\CH4_1.cpp:232:5: note:   no known conversion for argument 1 from 'Person' to 'Person*'
..\src\CH4_1.cpp:226:7: note: candidate: constexpr CurrentUser::CurrentUser(const CurrentUser&)
 class CurrentUser
       ^~~~~~~~~~~
..\src\CH4_1.cpp:226:7: note:   no known conversion for argument 1 from 'Person' to 'const CurrentUser&'
..\src\CH4_1.cpp:226:7: note: candidate: constexpr CurrentUser::CurrentUser(CurrentUser&&)
..\src\CH4_1.cpp:226:7: note:   no known conversion for argument 1 from 'Person' to 'CurrentUser&&'

23:59:47 Build Failed. 1 errors, 0 warnings. (took 290ms)

